# simple-taipy-dashboard

./: LICENSE  README.md  main.py  pyproject.toml
